...

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/giver_form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
...

    <ScrollView
        android:id="@+id/form_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
...

            <androidx.cardview.widget.CardView
                android:id="@+id/item_image_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <ImageButton
                        android:id="@+id/upload_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/categories_buttons_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                        android:text="@string/nav_food_title"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/category_food_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:text="@string/nav_study_material_title"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/category_study_material_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:text="@string/nav_furniture_title"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/category_households_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...

            <LinearLayout
                android:id="@+id/categories_buttons_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                        android:text="@string/nav_lost_and_found_title"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/category_lost_and_found_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:text="@string/nav_hitchhike_title"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/category_hitchhikes_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:text="@string/nav_other"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/category_other_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...

            <androidx.cardview.widget.CardView
                android:id="@+id/description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/pickup_time_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pickup_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <Spinner
                        android:id="@+id/pickup_method_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/add_location_button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/air_time_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/add_keywords_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.hootsuite.nachos.NachoTextView
                android:id="@+id/keywords_tag_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
