...
    <string name="report_spam_alert">Are you sure you want to report this item for being spam?</string>
    <string name="report_hide_alert">Are you sure you want to permanently remove the item from your feed?</string>
    <string name="report_alert_warning">This will permanently remove the item from your feed</string>


    <!-- Image upload elements -->
    <string name="upload_camera_text">Camera</string>
    <string name="upload_gallery_text">Gallery</string>


    <!-- Empty feed elements -->
    <string name="empty_feed_text_1">Uh-oh…\n\nSeems like there are no nearby items available right now!\n\nThe good news is:"</string>
    <string name="empty_feed_text_2">you can share the first one!</string>>
...
    <string name="giver_form_title_input_hint">Add a title</string>
    <string name="giver_form_add_a_picture_button_text">Add a picture:</string>
    <string name="enter_description_hint">Enter description</string>
    <string name="enter_time_hint">Specify time</string>
    <string name="pickup_method_prompt_text">Pickup Type</string>
    <string name="share_button_text">Share</string>
    <string name="air_time_clickable_change_text">Change</string>
    <string name="enter_location_hint">Enter location</string>
    <string name="enter_location_to_hint">To</string>
    <string name="enter_location_from_hint">From</string>
    <string name="picture_prompt">Add a picture</string>
    <string name="pickup_information_prompt_text">Pickup information</string>
    <string name="select_category_prompt">Select a category:</string>
    <string name="giver_form_item_information_title">Item information</string>
    <string name="tags_box_show_text">Add keywords</string>
    <string name="tags_box_hide_text">Hide keywords</string>
    <string name="air_time_tooltip_text">Select how long your item\nshould be listed for</string>
    <string name="tags_tooltip_text">Enter keywords to describe your item.\nSeparate with comma and enter,\n3\-15 characters long</string>
    <string name="save_location">Save location</string>
    <string name="edit_location">Edit location</string>
    <string name="giver_pickup_in_person">In Person</string>
...

    <!--FCM-->
    <string name="takecare_notification_channel_name">TakeCare</string>
    <string name="payload_display_status">display_status</string>
    <string name="payload_admin_broadcast">admin_broadcast</string>
    <string name="payload_item_request_message">item_request_message</string>
    <string name="payload_data_message_title">title</string>
    <string name="payload_data_message_body">body</string>
    <string name="payload_data_notification_type">notification_type</string>
    <string name="payload_data_sender_id">sender_id</string>
    <string name="payload_data_item_id">item_id</string>
    <string name="payload_data_sender_photo">sender_photo_url</string>
    <string name="payload_data_notification_time">notification_time</string>
...
